<resources>
    <string name="app_name">Milan</string>
    <string name="connexion_title"> Connexion </string>
    <string name="login"> Login </string>
    <string name="password"> Mot de passe </string>
    <string name="connexion_button_underline"> <u> Se connecter </u></string>
    <string name="inscription_button_underline"><u>S\'inscrire </u> </string>
    <string name="connexion_button">Se connecter</string>
    <string name="inscription_button">S\'inscrire</string>
    <string name="ou"> Se connecter avec </string>
    <string name="inscription_title"> Pas encore inscrit </string>
    <string name="inscription"> Inscription </string>
    <string name="ajout_nomutilisateur"> Définir un nom d\'utilisateur </string>
    <string name="nom_utilisateur"> Nom d\'utilisateur </string>
    <string name="suivant"> Suivant </string>
    <string name="ajout_mail"> Ajouter une adresse e-mail </string>
    <string name="ajout_tel"> Ajouter un numéro de téléphone </string>
    <string name="ajout_mdp"> Définir un mot de passe </string>
    <string name="mdp"> Mot de passe</string>
    <string name="mdp_oublier"> Mot de passe oublié</string>
    <string name="confirm_mdp"> Confirmer mot de passe</string>
    <string name="mail"> Adresse e-mail</string>
    <string name="tel"> Téléphone </string>
    <string name="verif"> Vérifier </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recherche">Recherche </string>
    <string name="menu_messages">Messages</string>

    <string name="menu_amis">Liste d\'amis </string>
    <string name="menu_video">Video Chat</string>
    <string name="menu_social"> Social Chat </string>

    <string name="menu_room"> Room Chat </string>
    <string name="menu_evenements"> Evenements </string>
    <string name="menu_actualite"> Fil d\'actualité </string>
    <string name="title_activity_main_message_fragment">MainActivity</string>
    <string name="title_friends">Amis</string>
    <string name="title_groups">Groupes</string>
    <string name="title_notifications">Notifications</string>

    <string name="post">Posts</string>
    <string name="like">Likes</string>

    <string name="room_music"> Musique </string>
    <string name="room_study"> Scolarité </string>
    <string name="room_movie"> Film/Série </string>
    <string name="room_car"> Auto/Moto </string>
    <string name="room_shop"> Shopping </string>
    <string name="room_it"> Informatique </string>
    <string name="room_meet"> Rencontre </string>
    <string name="room_work"> Travail </string>
    <string name="room_food"> Nourriture </string>
    <string name="room_dance"> Danse </string>
    <string name="room_art"> Art </string>
    <string name="room_trade"> Trade </string>
    <string name="room_game"> Jeux vidéo </string>
    <string name="room_travel"> Voyage </string>
    <string name="room_concert"> Festival/Concert </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_post"> Nouveau post </string>
    <string name="hint_post"> Dite ce que vous avez sur le coeur </string>
    <string name="room"> Room </string>
    <string name="photo"> Photos </string>
    <string name="title_dialog_room"> Choisis ta room </string>
</resources>