<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_actualite">

    <fragment
        android:id="@+id/nav_actualite"
        android:name="com.example.milan.ui.actualite.ActualiteFragment"
        android:label="@string/menu_actualite"
        tools:layout="@layout/fragment_actualite" >
        <action
            android:id="@+id/action_nav_actualite_to_nav_sub_room"
            app:destination="@id/nav_sub_actualite" />
    </fragment>

    <fragment
        android:id="@+id/nav_recherche"
        android:name="com.example.milan.ui.recherche.RechercheFragment"
        android:label="@string/menu_recherche"
        tools:layout="@layout/fragment_recherche" />

    <fragment
        android:id="@+id/nav_sub_social"
        android:name="com.example.milan.ui.socialchat.SubSocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_sub_social" >
        <action
            android:id="@+id/action_nav_sub_social_to_nav_social"
            app:destination="@id/nav_social" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.milan.ui.messages.MainMessageFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/activity_main_message_fragment" />

    <fragment
        android:id="@+id/nav_amis"
        android:name="com.example.milan.ui.amis.FriendsRequestFragment"
        android:label="@string/menu_amis"
        tools:layout="@layout/fragment_amis" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.milan.ui.videochat.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_social"
        android:name="com.example.milan.ui.socialchat.SocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" >
        <action
            android:id="@+id/action_nav_social_to_nav_sub_social"
            app:destination="@id/nav_sub_social" />
    </fragment>

    <fragment
        android:id="@+id/nav_room"
        android:name="com.example.milan.ui.roomchat.RoomChatFragment"
        android:label="@string/menu_room"
        tools:layout="@layout/fragment_room_chat" />

    <fragment
        android:id="@+id/nav_evenements"
        android:name="com.example.milan.ui.evenements.EvenementsFragment"
        android:label="@string/menu_evenements"
        tools:layout="@layout/fragment_evenements" />

    <fragment
        android:id="@+id/nav_sub_actualite"
        android:name="com.example.milan.ui.actualite.SubActualiteFragment"
        android:label="@string/room_car"
        tools:layout="@layout/fragment_sub_actualite" >
        <action
            android:id="@+id/action_nav_sub_room_to_nav_actualite"
            app:destination="@id/nav_actualite" />
    </fragment>
</navigation>